# xurich

./: Cargo.toml
src/: components.rs  gui.rs  inventory.rs  main.rs  map.rs  npc.rs  rect.rs
src/events/: combat.rs  inventory.rs  mod.rs
src/systems/: combat.rs  gameover.rs  mod.rs  newgame.rs  npc_ai.rs  npc_spawner.rs  player_input.rs  rendering.rs  spawner.rs  viewshed.rs  viewsheds.rs
