[package]
name = "xurich"
version = "0.1.0"
edition = "2021"
authors = ["Isaac Wyatt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_ascii_terminal = "0.14.0"
rltk = "0.8.7"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
